fix: simplifica delete e atualiza streams para Java 21 - ProjetoServiceImpl